<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fafafa"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_news_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxLength="80"
            android:paddingLeft="5dip"
            android:text="@string/temp_news_title"
            android:textColor="@color/black"
            android:textSize="16sp" 
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/imagebutton_listview"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@drawable/newsdemo1"
            android:contentDescription="@string/desc" >
        </ImageButton>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_listview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLength="70"
                android:paddingLeft="10dip"
                android:text="@string/temp_news_title"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/image_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/favorites" 
                    android:contentDescription="@string/desc"/>

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dip"
                    android:text="@string/temp_date"
                    android:textColor="@color/widgetFontColor" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>