<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fafafa" >

    <LinearLayout
        android:id="@+id/category30"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/titlebar_background"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp" >

            <ImageButton
                android:id="@+id/imagebutton_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/toolbar_back_button"
                android:contentDescription="@string/desc" >
            </ImageButton>
        </FrameLayout>

        <TextView
            android:id="@+id/textview_titleshow"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/specific_title"
            android:textColor="#000000"
            android:textSize="16sp"
            android:typeface="monospace" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category33"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/black"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imagebutton_331"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/showmethod1"
            android:contentDescription="@string/desc"
            android:gravity="right" >
        </ImageButton>

        <ImageButton
            android:id="@+id/imagebutton_332"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/showmethod2"
            android:contentDescription="@string/desc"
            android:gravity="right" >
        </ImageButton>

        <ImageButton
            android:id="@+id/imagebutton_333"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/showmethod3"
            android:contentDescription="@string/desc"
            android:gravity="right" >
        </ImageButton>

        <ImageButton
            android:id="@+id/imagebutton_334"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/showmethod4"
            android:contentDescription="@string/desc"
            android:gravity="right" >
        </ImageButton>
    </LinearLayout>

    <ScrollView
        android:id="@+id/myscrollview_detail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/category33"
        android:layout_below="@id/category30"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/category32"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <HorizontalScrollView
                android:id="@+id/hsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scrollbars="none" >
<!-- Since Gallery has been depressed, i add this customed LinearLayout with horizontalScollView to deal it with same. -->
                <Dolphin.src.Util.HorizontalScrollViewLinearLayout
                    android:id="@+id/hsv_linearlayout"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="#ffffff" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textview_description"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/textview_description_temp"
                android:textColor="@color/black" >
            </TextView>

            <LinearLayout
                android:id="@+id/category322"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="left"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detail_express_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/textview_express"
                    android:textColor="@color/black" >
                </TextView>

                <TextView
                    android:id="@+id/detail_express_textview_info"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="30dp"
                    android:text="UPS"
                    android:textColor="@color/widgetFontColor" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/category323"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="left"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detail_color_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/textview_color"
                    android:textColor="@color/black" >
                </TextView>

                <TextView
                    android:id="@+id/detail_color_textview_info"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="40dp"
                    android:text="Black"
                    android:textColor="@color/widgetFontColor" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/category325"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="left"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detail_price_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/textview_price"
                    android:textColor="@color/black" >
                </TextView>

                <TextView
                    android:id="@+id/detail_prices_textview_info"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="40dp"
                    android:text="$500"
                    android:textColor="@color/widgetFontColor" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/category326"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="left"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detail_size_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/textview_size"
                    android:textColor="@color/black" >
                </TextView>

                <TextView
                    android:id="@+id/detail_size_textview_info"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="50dp"
                    android:text="ONE"
                    android:textColor="@color/widgetFontColor" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/category327"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_detail_info"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/button_detail_introduction" >
                </Button>

                <Button
                    android:id="@+id/button_save_it"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/button_save" >
                </Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/category328"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_buy"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="BUY" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>