<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RelativeLayout02"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#fafafa" xmlns:android="http://schemas.android.com/apk/res/android">
	 <LinearLayout
        android:id="@+id/category21"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/titlebar_background"
        android:orientation="horizontal" 
       >
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/imagebutton_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/toolbar_back_button" 
                android:contentDescription="@string/desc">
            </ImageButton>
        </FrameLayout>

        <TextView
            android:id="@+id/textview_titleshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onescreen_title"
            android:textColor="#000000"
            android:textSize="16sp"
            android:typeface="sans"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center"
            android:layout_weight="1">       
        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity = "right"
            android:gravity = "right"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/fourshow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:background="@drawable/toolbar_gallery_button"
                android:contentDescription="@string/desc"/>

            <ImageButton
                android:id="@+id/oneshow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:background="@drawable/toolbar_list_button"
                android:contentDescription="@string/desc"/>

        </LinearLayout>

    </LinearLayout>
	
	<LinearLayout android:id="@+id/category22"
		android:layout_width="260dp" android:layout_height="320dp"
		android:orientation="vertical" android:gravity="center"
		android:layout_centerInParent="true" android:layout_below="@id/category21"
		android:background="#ffffff"
		android:layout_marginTop="20dp">
		<ImageButton android:id="@+id/imagebutton_oneshow"
			android:layout_width="240dp" android:layout_height="260dp"
		    android:layout_gravity="center_horizontal"
			android:gravity="right" android:background="@drawable/mlb201010yj001"
			android:contentDescription="@string/desc">
		</ImageButton>
		<TextView android:id="@+id/oneshow_textview"
			android:layout_width="200dp" android:layout_height="50dp"
			android:text="@string/textview_content_temp"
			android:textColor="@color/black">
		</TextView>
	</LinearLayout>
	<LinearLayout android:id="@+id/category23"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:layout_alignParentBottom="true"
		android:gravity="center_horizontal" android:background="@drawable/black">
		<ImageButton android:id="@+id/button_preview"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:gravity="right" android:background="@drawable/pre1"
			android:contentDescription="@string/desc">
		</ImageButton>
		<ImageButton android:id="@+id/button_next"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:gravity="right" android:background="@drawable/next2"
			android:contentDescription="@string/desc">
		</ImageButton>
	</LinearLayout>
</RelativeLayout>

